# soroban-recurring-revenue

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  test.rs
