[package]
name = "soroban-recurring-revenue"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "0.4.2"
soroban-auth = "0.4.2"
soroban-token-spec = "0.4.2"

[dev_dependencies]
soroban-sdk = { version = "0.4.2", features = ["testutils"] }
soroban-auth = { version = "0.4.2", features = ["testutils"] }
soroban-token-spec = { version = "0.4.2", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true